@@ -1,3 +1,8 @@
+2012-06-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tclUnixInit.c: On Cygwin, use win32 API in stead of uname()
+	to determine the tcl_platform variables.
+
 2012-05-25  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinDde.c:    [Bug 473946]: special characters not correctly sent,
